--- a/installation.html
+++ b/installation.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
-  <h1>Hidden window to perform installation and updates as background process</h1>
-  <script>
-    /*
-     *  App
-     */
-    require('./lib/installation')
-  </script>
+    <h1>
+      Hidden window to perform installation and updates as background process
+    </h1>
+    <script>
+      /*
+       *  App
+       */
+      require('./lib/installation')
+    </script>
   </body>
 </html>
