--- a/run-service.html
+++ b/run-service.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Hidden window to run services as background process</h1>
+    <h1>
+      Hidden window to run services as background process
+    </h1>
     <script>
       /*
        *  App
