--- a/create.html
+++ b/create.html
@@ -1,104 +1,185 @@
 <!DOCTYPE html>
 <html lang="en" class="govuk-template">
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Form Builder - Create form</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#0b0c0c">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="mask-icon" href="assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/govuk-apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="assets/images/govuk-apple-touch-icon-167x167.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/govuk-apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" href="assets/images/govuk-apple-touch-icon.png">
-    <link rel="stylesheet" href="assets/stylesheets/create-0.5.5.css">
-    <meta property="og:image" content="assets/images/govuk-opengraph-image.png">
-</head>
-<body class="govuk-template__body">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0b0c0c" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="mask-icon"
+      href="assets/images/govuk-mask-icon.svg"
+      color="#0b0c0c"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/govuk-apple-touch-icon-180x180.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="167x167"
+      href="assets/images/govuk-apple-touch-icon-167x167.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="assets/images/govuk-apple-touch-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="assets/images/govuk-apple-touch-icon.png"
+    />
+    <link rel="stylesheet" href="assets/stylesheets/create-0.5.5.css" />
+    <meta
+      property="og:image"
+      content="assets/images/govuk-opengraph-image.png"
+    />
+  </head>
+  <body class="govuk-template__body">
     <script>
-      document.body.className = document.body.className ? `${document.body.className.trim()} js-enabled` : 'js-enabled'
+      document.body.className = document.body.className
+        ? `${document.body.className.trim()} js-enabled`
+        : 'js-enabled'
     </script>
+
     <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+
     <header class="fb-editor-header--wrapper">
-        <div class="fb-editor-header">
-            <div class="fb-editorheader--branding">
-                <div class="govuk-header__logo">
-                    <a href="index.html" class="govuk-header__link govuk-header__link--homepage">
-                        <span class="govuk-header__logotype">
-                            <svg role="presentation" focusable="false" class="govuk-header__logotype-crown" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 97" height="32" width="36">
-                                <path fill="currentColor" fill-rule="evenodd" d="M25 30.2c3.5 1.5 7.7-.2 9.1-3.7 1.5-3.6-.2-7.8-3.9-9.2-3.6-1.4-7.6.3-9.1 3.9-1.4 3.5.3 7.5 3.9 9zM9 39.5c3.6 1.5 7.8-.2 9.2-3.7 1.5-3.6-.2-7.8-3.9-9.1-3.6-1.5-7.6.2-9.1 3.8-1.4 3.5.3 7.5 3.8 9zM4.4 57.2c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.5-1.5-7.6.3-9.1 3.8-1.4 3.5.3 7.6 3.9 9.1zm38.3-21.4c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.6-1.5-7.6.3-9.1 3.8-1.3 3.6.4 7.7 3.9 9.1zm64.4-5.6c-3.6 1.5-7.8-.2-9.1-3.7-1.5-3.6.2-7.8 3.8-9.2 3.6-1.4 7.7.3 9.2 3.9 1.3 3.5-.4 7.5-3.9 9zm15.9 9.3c-3.6 1.5-7.7-.2-9.1-3.7-1.5-3.6.2-7.8 3.7-9.1 3.6-1.5 7.7.2 9.2 3.8 1.5 3.5-.3 7.5-3.8 9zm4.7 17.7c-3.6 1.5-7.8-.2-9.2-3.8-1.5-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.3 3.5-.4 7.6-3.9 9.1zM89.3 35.8c-3.6 1.5-7.8-.2-9.2-3.8-1.4-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.4 3.6-.3 7.7-3.9 9.1zM69.7 17.7l8.9 4.7V9.3l-8.9 2.8c-.2-.3-.5-.6-.9-.9L72.4 0H59.6l3.5 11.2c-.3.3-.6.5-.9.9l-8.8-2.8v13.1l8.8-4.7c.3.3.6.7.9.9l-5 15.4v.1c-.2.8-.4 1.6-.4 2.4 0 4.1 3.1 7.5 7 8.1h.2c.3 0 .7.1 1 .1.4 0 .7 0 1-.1h.2c4-.6 7.1-4.1 7.1-8.1 0-.8-.1-1.7-.4-2.4V34l-5.1-15.4c.4-.2.7-.6 1-.9zM66 92.8c16.9 0 32.8 1.1 47.1 3.2 4-16.9 8.9-26.7 14-33.5l-9.6-3.4c1 4.9 1.1 7.2 0 10.2-1.5-1.4-3-4.3-4.2-8.7L108.6 76c2.8-2 5-3.2 7.5-3.3-4.4 9.4-10 11.9-13.6 11.2-4.3-.8-6.3-4.6-5.6-7.9 1-4.7 5.7-5.9 8-.5 4.3-8.7-3-11.4-7.6-8.8 7.1-7.2 7.9-13.5 2.1-21.1-8 6.1-8.1 12.3-4.5 20.8-4.7-5.4-12.1-2.5-9.5 6.2 3.4-5.2 7.9-2 7.2 3.1-.6 4.3-6.4 7.8-13.5 7.2-10.3-.9-10.9-8-11.2-13.8 2.5-.5 7.1 1.8 11 7.3L80.2 60c-4.1 4.4-8 5.3-12.3 5.4 1.4-4.4 8-11.6 8-11.6H55.5s6.4 7.2 7.9 11.6c-4.2-.1-8-1-12.3-5.4l1.4 16.4c3.9-5.5 8.5-7.7 10.9-7.3-.3 5.8-.9 12.8-11.1 13.8-7.2.6-12.9-2.9-13.5-7.2-.7-5 3.8-8.3 7.1-3.1 2.7-8.7-4.6-11.6-9.4-6.2 3.7-8.5 3.6-14.7-4.6-20.8-5.8 7.6-5 13.9 2.2 21.1-4.7-2.6-11.9.1-7.7 8.8 2.3-5.5 7.1-4.2 8.1.5.7 3.3-1.3 7.1-5.7 7.9-3.5.7-9-1.8-13.5-11.2 2.5.1 4.7 1.3 7.5 3.3l-4.7-15.4c-1.2 4.4-2.7 7.2-4.3 8.7-1.1-3-.9-5.3 0-10.2l-9.5 3.4c5 6.9 9.9 16.7 14 33.5 14.8-2.1 30.8-3.2 47.7-3.2z"></path>
-                                <image src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image"></image>
-                            </svg>
-                            <span class="govuk-header__logotype-text">
-                                Ministry of Justice
-                            </span>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="fb-editorheader--form xgovuk-header__link govuk-header__link--service-name">Form Builder Console</div>
-            <nav class="fb-editorheader--navigation">
-                <ul>
-                    <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="settings.html">Settings</a></li>
-                </ul>
-            </nav>
+      <div class="fb-editor-header">
+        <div class="fb-editorheader--branding">
+          <div class="govuk-header__logo">
+            <a
+              href="index.html"
+              class="govuk-header__link govuk-header__link--homepage"
+            >
+              <span class="govuk-header__logotype">
+                <svg
+                  role="presentation"
+                  focusable="false"
+                  class="govuk-header__logotype-crown"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 132 97"
+                  height="32"
+                  width="36"
+                >
+                  <path
+                    fill="currentColor"
+                    fill-rule="evenodd"
+                    d="M25 30.2c3.5 1.5 7.7-.2 9.1-3.7 1.5-3.6-.2-7.8-3.9-9.2-3.6-1.4-7.6.3-9.1 3.9-1.4 3.5.3 7.5 3.9 9zM9 39.5c3.6 1.5 7.8-.2 9.2-3.7 1.5-3.6-.2-7.8-3.9-9.1-3.6-1.5-7.6.2-9.1 3.8-1.4 3.5.3 7.5 3.8 9zM4.4 57.2c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.5-1.5-7.6.3-9.1 3.8-1.4 3.5.3 7.6 3.9 9.1zm38.3-21.4c3.5 1.5 7.7-.2 9.1-3.8 1.5-3.6-.2-7.7-3.9-9.1-3.6-1.5-7.6.3-9.1 3.8-1.3 3.6.4 7.7 3.9 9.1zm64.4-5.6c-3.6 1.5-7.8-.2-9.1-3.7-1.5-3.6.2-7.8 3.8-9.2 3.6-1.4 7.7.3 9.2 3.9 1.3 3.5-.4 7.5-3.9 9zm15.9 9.3c-3.6 1.5-7.7-.2-9.1-3.7-1.5-3.6.2-7.8 3.7-9.1 3.6-1.5 7.7.2 9.2 3.8 1.5 3.5-.3 7.5-3.8 9zm4.7 17.7c-3.6 1.5-7.8-.2-9.2-3.8-1.5-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.3 3.5-.4 7.6-3.9 9.1zM89.3 35.8c-3.6 1.5-7.8-.2-9.2-3.8-1.4-3.6.2-7.7 3.9-9.1 3.6-1.5 7.7.3 9.2 3.8 1.4 3.6-.3 7.7-3.9 9.1zM69.7 17.7l8.9 4.7V9.3l-8.9 2.8c-.2-.3-.5-.6-.9-.9L72.4 0H59.6l3.5 11.2c-.3.3-.6.5-.9.9l-8.8-2.8v13.1l8.8-4.7c.3.3.6.7.9.9l-5 15.4v.1c-.2.8-.4 1.6-.4 2.4 0 4.1 3.1 7.5 7 8.1h.2c.3 0 .7.1 1 .1.4 0 .7 0 1-.1h.2c4-.6 7.1-4.1 7.1-8.1 0-.8-.1-1.7-.4-2.4V34l-5.1-15.4c.4-.2.7-.6 1-.9zM66 92.8c16.9 0 32.8 1.1 47.1 3.2 4-16.9 8.9-26.7 14-33.5l-9.6-3.4c1 4.9 1.1 7.2 0 10.2-1.5-1.4-3-4.3-4.2-8.7L108.6 76c2.8-2 5-3.2 7.5-3.3-4.4 9.4-10 11.9-13.6 11.2-4.3-.8-6.3-4.6-5.6-7.9 1-4.7 5.7-5.9 8-.5 4.3-8.7-3-11.4-7.6-8.8 7.1-7.2 7.9-13.5 2.1-21.1-8 6.1-8.1 12.3-4.5 20.8-4.7-5.4-12.1-2.5-9.5 6.2 3.4-5.2 7.9-2 7.2 3.1-.6 4.3-6.4 7.8-13.5 7.2-10.3-.9-10.9-8-11.2-13.8 2.5-.5 7.1 1.8 11 7.3L80.2 60c-4.1 4.4-8 5.3-12.3 5.4 1.4-4.4 8-11.6 8-11.6H55.5s6.4 7.2 7.9 11.6c-4.2-.1-8-1-12.3-5.4l1.4 16.4c3.9-5.5 8.5-7.7 10.9-7.3-.3 5.8-.9 12.8-11.1 13.8-7.2.6-12.9-2.9-13.5-7.2-.7-5 3.8-8.3 7.1-3.1 2.7-8.7-4.6-11.6-9.4-6.2 3.7-8.5 3.6-14.7-4.6-20.8-5.8 7.6-5 13.9 2.2 21.1-4.7-2.6-11.9.1-7.7 8.8 2.3-5.5 7.1-4.2 8.1.5.7 3.3-1.3 7.1-5.7 7.9-3.5.7-9-1.8-13.5-11.2 2.5.1 4.7 1.3 7.5 3.3l-4.7-15.4c-1.2 4.4-2.7 7.2-4.3 8.7-1.1-3-.9-5.3 0-10.2l-9.5 3.4c5 6.9 9.9 16.7 14 33.5 14.8-2.1 30.8-3.2 47.7-3.2z"
+                  ></path>
+                  <image
+                    src="/assets/images/govuk-logotype-crown.png"
+                    class="govuk-header__logotype-crown-fallback-image"
+                  ></image>
+                </svg>
+                <span class="govuk-header__logotype-text">
+                  Ministry of Justice
+                </span>
+              </span>
+            </a>
+          </div>
         </div>
-        <nav class="fb-navigation">
-            <ul>
-                <li class="govuk-link"><a href="index.html">Forms</a></li>
-                <li class="govuk-link"><a href="add.html">Add existing form</a></li>
-                <li class="govuk-link fb-navigation-current"><a href="create.html">Create form</a></li>
-            </ul>
+        <div
+          class="fb-editorheader--form xgovuk-header__link govuk-header__link--service-name"
+        >
+          Form Builder Console
+        </div>
+        <nav class="fb-editorheader--navigation">
+          <ul>
+            <li class="govuk-header__navigation-item">
+              <a class="govuk-header__link" href="settings.html">Settings</a>
+            </li>
+          </ul>
         </nav>
+      </div>
+      <nav class="fb-navigation">
+        <ul>
+          <li class="govuk-link"><a href="index.html">Forms</a></li>
+          <li class="govuk-link"><a href="add.html">Add existing form</a></li>
+          <li class="govuk-link fb-navigation-current">
+            <a href="create.html">Create form</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="govuk-width-container govuk-body-m">
-        <main class="govuk-main-wrapper " id="main-content" role="main">
-            <div class="govuk-main-wrapper">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        <h1 class="govuk-heading-xl">Create form</h1>
-                        <div class="govuk-error-summary js-hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
-                            <h2 class="govuk-error-summary__title" id="error-summary-title">
-                                There is a problem
-                            </h2>
-                            <div class="govuk-error-summary__body">
-                                <ul class="govuk-list govuk-error-summary__list">
-                                    <li>
-                                        <a href="#createrepo" id="errorMessage"></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!-- CONTENTS -->
-                        <div class="govuk-form-group govuk-form-group-target">
-                            <label class="govuk-label" for="formname">
-                                Form name
-                            </label>
-                            <span class="govuk-hint">
-                                The name should contain only letters and numbers
-                            </span>
-                            <span id="input-error" class="govuk-error-message">
-                            </span>
-                            <input class="govuk-input govuk-input-target" id="formname" name="formname" type="text" pattern="^[a-z0-9]+$">
-                        </div>
-                        <div class="govuk-form-group createrepo-group">
-                            <div class="govuk-checkboxes__item">
-                                <input class="govuk-checkboxes__input" id="createrepo" name="createrepo" type="checkbox" value="yes">
-                                <label class="govuk-label govuk-checkboxes__label" for="createrepo">
-                                    Create repository
-                                </label>
-                            </div>
-                        </div>
-                        <p id="gitInstructions">If you want to create a github repository for the form at the same time, please add your github details in <a href="settings.html">settings</a></p>
-                        <button type="submit" class="govuk-button" id="createForm">
-                            Create form
-                        </button>
-                        <!-- CONTENTS END -->
-                    </div>
+      <main class="govuk-main-wrapper " id="main-content" role="main">
+        <div class="govuk-main-wrapper">
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+              <h1 class="govuk-heading-xl">Create form</h1>
+              <div
+                class="govuk-error-summary js-hidden"
+                aria-labelledby="error-summary-title"
+                role="alert"
+                tabindex="-1"
+                data-module="error-summary"
+              >
+                <h2 class="govuk-error-summary__title" id="error-summary-title">
+                  There is a problem
+                </h2>
+                <div class="govuk-error-summary__body">
+                  <ul class="govuk-list govuk-error-summary__list">
+                    <li>
+                      <a href="#createrepo" id="errorMessage"></a>
+                    </li>
+                  </ul>
                 </div>
+              </div>
+              <!-- CONTENTS -->
+              <div class="govuk-form-group govuk-form-group-target">
+                <label class="govuk-label" for="formname">
+                  Form name
+                </label>
+                <span class="govuk-hint">
+                  The name should contain only letters and numbers
+                </span>
+                <span id="input-error" class="govuk-error-message"> </span>
+                <input
+                  class="govuk-input govuk-input-target"
+                  id="formname"
+                  name="formname"
+                  type="text"
+                  pattern="^[a-z0-9]+$"
+                />
+              </div>
+              <div class="govuk-form-group createrepo-group">
+                <div class="govuk-checkboxes__item">
+                  <input
+                    class="govuk-checkboxes__input"
+                    id="createrepo"
+                    name="createrepo"
+                    type="checkbox"
+                    value="yes"
+                  />
+                  <label
+                    class="govuk-label govuk-checkboxes__label"
+                    for="createrepo"
+                  >
+                    Create repository
+                  </label>
+                </div>
+              </div>
+              <p id="gitInstructions">
+                If you want to create a github repository for the form at the
+                same time, please add your github details in
+                <a href="settings.html">settings</a>
+              </p>
+              <button type="submit" class="govuk-button" id="createForm">
+                Create form
+              </button>
+              <!-- CONTENTS END -->
             </div>
-        </main>
+          </div>
+        </div>
+      </main>
     </div>
+
     <script src="assets/javascripts/app-0.5.5.js"></script>
     <script>
       /*
@@ -106,6 +187,5 @@
        */
       require('./lib/create')
     </script>
-</body>
-
+  </body>
 </html>
