--- a/settings.html
+++ b/settings.html
@@ -120,7 +120,7 @@
 
               <!-- CONTENTS -->
 
-              <div class="govuk-tabs" data-module="tabs">
+              <div class="govuk-tabs" data-module="govuk-tabs">
                 <h2 class="govuk-tabs__title">
                   Contents
                 </h2>
@@ -233,7 +233,6 @@
     </div>
 
     <script src="assets/javascripts/app-0.5.5.js"></script>
-    <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
       /*
        *  App
