--- a/settings.html
+++ b/settings.html
@@ -129,9 +129,17 @@
                   <li class="govuk-tabs__list-item">
                     <a
                       class="govuk-tabs__tab govuk-tabs__tab--selected"
-                      href="#git"
+                      href="#git-user"
                     >
-                      Github settings
+                      GitHub user settings
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a
+                      class="govuk-tabs__tab govuk-tabs__tab--selected"
+                      href="#git-auth"
+                    >
+                      GitHub access token
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
@@ -141,9 +149,9 @@
                   </li>
                 </ul>
 
-                <section class="govuk-tabs__panel" id="git">
+                <section class="govuk-tabs__panel" id="git-user">
                   <h2 class="govuk-heading-l govuk-visually-hidden">
-                    Git settings
+                    Git user settings
                   </h2>
                   <div class="govuk-form-group">
                     <label class="govuk-label" for="name">
@@ -178,33 +186,62 @@
                       type="text"
                     />
                   </div>
+                  <button type="submit" class="govuk-button" id="saveGitUser">
+                    Save
+                  </button>
+                </section>
+
+                <section class="govuk-tabs__panel" id="git-auth">
+                  <h2 class="govuk-heading-l govuk-visually-hidden">
+                    Git access token
+                  </h2>
                   <div class="govuk-form-group">
                     <label class="govuk-label" for="token">
-                      Github access token
+                      Your GitHub access token
                     </label>
                     <span class="govuk-hint"> </span>
                     <input
                       class="govuk-input"
                       id="token"
                       name="token"
-                      type="text"
+                      type="password"
                     />
                   </div>
-                  <button type="submit" class="govuk-button" id="saveGit">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="token">
+                      Secure your token with a password
+                    </label>
+                    <span class="govuk-hint"> </span>
+                    <input
+                      class="govuk-input"
+                      id="password"
+                      name="password"
+                      type="password"
+                    />
+                  </div>
+                  <button type="submit" class="govuk-button" id="saveGitAuth">
                     Save
                   </button>
 
                   <div class="govuk-inset-text">
-                    <h3>About the Github access token</h3>
+                    <h3>About the GitHub access token</h3>
                     <p>
                       Your access token should be created with the
                       <b>public_repo</b> scope.
                     </p>
                     <a id="tokenHowTo" href="#"
-                      >How to create a Github access token</a
+                      >How to create a GitHub access token</a
                     >
                   </div>
+
+                  <div class="govuk-inset-text">
+                    <h3>About the token password</h3>
+                    <p>
+                      The password is used to securely store the GitHub access token for this application. We recommend creating a strong password and keeping it safe with a password manager such as LastPass.
+                    </p>
+                  </div>
                 </section>
+
                 <section
                   class="govuk-tabs__panel govuk-tabs__panel--hidden"
                   id="updates"
