--- a/password.html
+++ b/password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="govuk-template">
   <head>
-    <title>Form Builder - Forms</title>
+    <title>Form Builder - Create a form - GitHub Personal Access Token Password</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -41,13 +41,13 @@
       rel="apple-touch-icon"
       href="assets/images/govuk-apple-touch-icon.png"
     />
-    <link rel="stylesheet" href="assets/stylesheets/app-0.5.30.css" />
+    <link rel="stylesheet" href="assets/stylesheets/password-0.5.30.css" />
     <meta
       property="og:image"
       content="assets/images/govuk-opengraph-image.png"
     />
   </head>
-  <body class="govuk-template__body">
+    <body class="govuk-template__body">
     <script>
       document.body.className = document.body.className
         ? `${document.body.className.trim()} js-enabled`.trim()
@@ -105,39 +105,65 @@
 
       <nav class="fb-navigation">
         <ul>
-          <li class="govuk-link fb-navigation-current">
-            <a href="./index.html">Forms</a>
-          </li>
+          <li class="govuk-link"><a href="./index.html">Forms</a></li>
           <li class="govuk-link"><a href="./add.html">Add an existing form</a></li>
-          <li class="govuk-link"><a href="./create.html">Create a form</a></li>
+          <li class="govuk-link fb-navigation-current">
+            <a href="./create.html">Create a form</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <div class="govuk-width-container govuk-body-m">
+      <a href="./create.html" class="govuk-back-link">Back</a>
+
       <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-full-width">
-            <h1 class="govuk-heading-xl">Forms</h1>
-            <p id="formsInstructions">
-              Please
-              <a class="govuk-link" href="settings.html">add your github details</a>
-            </p>
+          <div class="govuk-grid-column-two-thirds">
+            <div
+              class="govuk-error-summary js-hidden"
+              aria-labelledby="error-summary-title"
+              role="alert"
+              tabindex="-1"
+              data-module="error-summary">
+              <h2 class="govuk-error-summary__title" id="error-summary-title">
+                There is a problem
+              </h2>
+              <div class="govuk-error-summary__body">
+                <ul class="govuk-list govuk-error-summary__list">
+                  <li>
+                    <a href="#access-token-password">
+                      Enter your personal access token password
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
 
-            <table class="govuk-table">
-              <caption class="govuk-table__caption govuk-visually-hidden">
-                List of forms
-              </caption>
-              <tbody class="govuk-table__body" id="services">
-                <!-- generated list of forms -->
-              </tbody>
-            </table>
+            <h1 class="govuk-heading-xl">Password</h1>
 
-            <p id="servicesInstructions">
-              You don’t have any forms yet.
-              <a class="govuk-link" href="./create.html">Create a new form</a>
-              or <a class="govuk-link" href="./add.html">add an existing one</a>
-            </p>
+            <form id="password-form" method="post" action="./password.html">
+              <div class="govuk-form-group access-token-password-group">
+                <label class="govuk-label" for="access-token-password">Access token password</label>
+                <span id="access-token-password-error" class="govuk-error-message">Enter your personal access token password</span>
+                <input class="govuk-input govuk-input--width-10" type="text" id="access-token-password" name="access-token-password" />
+              </div>
+
+              <button class="govuk-button" data-module="govuk-button" type="submit" id="submit-password">Submit password</button>
+            </form>
+
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Help with your password
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p>Your GitHub personal access token is stored securely on your device. A password is required to access it.</p>
+
+                <p>If you have forgotten your password you can enter a new access token with a new password in <a href="./settings.html">Settings</a>.
+              </div>
+            </details>
           </div>
         </div>
       </main>
@@ -145,32 +171,11 @@
 
     <script src="assets/javascripts/app-0.5.30.js"></script>
     <script>
-      const logger = require('electron-timber')
-
       /*
        *  App
        */
-      const {
-        startForm,
-        stopForm,
-        openForm,
-        deleteForm,
-        reloadPage,
-        listServices
-      } = require('./lib/forms')
 
-      global.startForm = startForm
-      global.stopForm = stopForm
-      global.openForm = openForm
-      global.deleteForm = deleteForm
-      global.reloadPage = reloadPage
-
-      logger.log('Listing services ...')
-
-      listServices()
-        .then(() => {
-          logger.log('Services listed')
-        })
+      require('./lib/password')
     </script>
   </body>
 </html>
