--- a/create.html
+++ b/create.html
@@ -158,18 +158,18 @@
                 pattern="^[a-z0-9]+$"
               />
             </div>
-            <div class="govuk-form-group create-repo-group">
+            <div class="govuk-form-group create-remote-group">
               <div class="govuk-checkboxes__item">
                 <input
                   class="govuk-checkboxes__input"
-                  id="create-repo"
-                  name="create-repo"
+                  id="create-remote"
+                  name="create-remote"
                   type="checkbox"
                   value="yes"
                 />
                 <label
                   class="govuk-label govuk-checkboxes__label"
-                  for="create-repo">
+                  for="create-remote">
                   Create a GitHub repository
                 </label>
               </div>
