--- a/token.html
+++ b/token.html
@@ -159,7 +159,7 @@
           <div class="govuk-form-group access-token-password-group">
             <label class="govuk-label" for="access-token-password">Password</label>
             <span id="access-token-password-error" class="govuk-error-message">Enter an access token password</span>
-            <input class="govuk-input govuk-input--width-10" type="text" id="access-token-password" name="access-token-password" />
+            <input class="govuk-input govuk-input--width-10" type="password" id="access-token-password" name="access-token-password" />
           </div>
 
           <button class="govuk-button" data-module="govuk-button" type="submit" id="save-user-settings">Save</button>
