--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         openForm,
         deleteForm,
         reloadPage,
-        listServices
+        listServices,
+        updateFileUploadComponentsInForm
       } = require('./lib/forms')
 
       global.startForm = startForm
@@ -164,6 +165,7 @@
       global.openForm = openForm
       global.deleteForm = deleteForm
       global.reloadPage = reloadPage
+      global.updateFileUploadComponentsInForm = updateFileUploadComponentsInForm
 
       logger.log('Listing services ...')
 
