Update content for github account tab in settings

--- a/settings.html
+++ b/settings.html
@@ -118,7 +118,7 @@
 
       <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-two-thirds">
+          <div class="govuk-grid-column-three-quarters">
             <h1 class="govuk-heading-xl">Settings</h1>
 
             <!-- CONTENTS -->
@@ -131,7 +131,7 @@
                 <li class="govuk-tabs__list-item">
                   <a
                     class="govuk-tabs__tab govuk-tabs__tab--selected"
-                    href="#git-user">GitHub user details</a>
+                    href="#git-user">GitHub account details</a>
                 </li>
                 <li class="govuk-tabs__list-item">
                   <a
@@ -151,7 +151,7 @@
                 </h2>
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="name">
-                    Name
+                    Full name
                   </label>
                   <input
                     class="govuk-input"
@@ -173,7 +173,7 @@
                 </div>
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="user">
-                    Username
+                    GitHub username
                   </label>
                   <input
                     class="govuk-input"
