Update content of create a form page

--- a/create.html
+++ b/create.html
@@ -147,7 +147,7 @@
                 Form name
               </label>
               <span class="govuk-hint">
-                Only letters, numbers, underscores, and hyphens
+                This will not be visible on your published form
               </span>
               <span id="input-error" class="govuk-error-message"> </span>
               <input
@@ -170,18 +170,17 @@
                 <label
                   class="govuk-label govuk-checkboxes__label"
                   for="create-remote">
-                  Create a GitHub repository
+                  Create a GitHub repository (if you want to publish your form)
                 </label>
               </div>
             </div>
 
             <p id="token-and-password" class="js-hidden">
-              To create a GitHub repository for the form, add your GitHub user details and personal access token in
-              <a href="settings.html">Settings</a>.
+              If you want to publish your form, add your <a href="./settings.html">GitHub account details</a> and <a href="./token.html">personal access token</a>.
             </p>
 
             <button type="submit" class="govuk-button" id="create-form">
-              Create the form
+              Create form
             </button>
             <!-- CONTENTS END -->
           </div>
