Remove the word 'Console'
We want to have just 'Form Builder' as the name of the application, so
remove all user facing instances of 'Console'.

--- a/add.html
+++ b/add.html
@@ -92,7 +92,7 @@
 
         <div
           class="fb-editorheader--form xgovuk-header__link govuk-header__link--service-name">
-          Form Builder Console
+          Form Builder
         </div>
         <nav class="fb-editorheader--navigation">
           <ul>
