--- a/notification.html
+++ b/notification.html
@@ -13,7 +13,7 @@
     <div class="pane">
       <div class="pane--header">
         <h1 id="consoleInstallerTitle" class="govuk-heading-l">
-          Form Builder <span>Editor Console</span>
+          Form Builder <span>Editor</span>
         </h1>
       </div>
       <div class="pane--body">
