--- a/create.html
+++ b/create.html
@@ -92,7 +92,7 @@
 
         <div
           class="fb-editorheader--form xgovuk-header__link govuk-header__link--service-name">
-          Form Builder Console
+          Form Builder
         </div>
         <nav class="fb-editorheader--navigation">
           <ul>
